[socialnetwork-config-server]: Added Spring Boot Actuator properties

--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -1,3 +1,7 @@
+# Spring: Actuator
+management.endpoints.web.base-path=/management
+management.endpoints.web.exposure.include=*
+
 # Spring Cloud: Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
