--- a/spring-config/configurations/api-gateway-docker.properties
+++ b/spring-config/configurations/api-gateway-docker.properties
@@ -1,3 +1,7 @@
+# Spring: Actuator
+management.endpoints.web.base-path=/management
+management.endpoints.web.exposure.include=*
+
 # Spring Cloud: Eureka
 eureka.client.service-url.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
