--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -1,3 +1,7 @@
+# Spring: Actuator
+management.endpoints.web.base-path=/management
+management.endpoints.web.exposure.include=*
+
 # Spring: Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
