--- a/socialnetwork-app-client/package.json
+++ b/socialnetwork-app-client/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
-    "bootstrap": "^4.5.0",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.2.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.14",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
