[socialnetwork-config-server]: Added encrypt key to application.properties

--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
 spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.search-paths=spring-config/configurations
+
+# Spring Cloud: Config Encryption
+encrypt.key=Xfq4F8Dv/5SqOZdcO+JLDpARJLuOEon7fsK+i0CPZTI=
