--- a/socialnetwork-profile-service/src/test/resources/application-test.properties
+++ b/socialnetwork-profile-service/src/test/resources/application-test.properties
@@ -9,6 +9,9 @@ eureka.client.enabled=false
 # Spring Cloud: Config
 spring.cloud.config.enabled=false
 
+# Jwt Token Configuration
+security.jwt.token.secret-key=test
+
 # Spring: Multipart File Size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
