[socialnetwork-user-service]: Fixed integration tests

--- a/socialnetwork-user-service/src/test/resources/application-test.properties
+++ b/socialnetwork-user-service/src/test/resources/application-test.properties
@@ -9,6 +9,9 @@ eureka.client.enabled=false
 # Spring Cloud: Config
 spring.cloud.config.enabled=false
 
+# Jwt Token Configuration
+security.jwt.token.secret-key=test
+
 # SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
 
