[socialnetwork-config-server]: Renamed route host property for api-gateway

--- a/spring-config/configurations/api-gateway-docker.properties
+++ b/spring-config/configurations/api-gateway-docker.properties
@@ -16,5 +16,5 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
 
 # API Gateway Route Hosts
-sn.api-gateway.route.host.user-service=http://socialnetwork-user-service:8084
-sn.api-gateway.route.host.profile-service=http://socialnetwork-profile-service:8081
+sn.api-gateway.route.hosts.user-service=http://socialnetwork-user-service:8084
+sn.api-gateway.route.hosts.profile-service=http://socialnetwork-profile-service:8081
