--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -16,5 +16,5 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
 
 # API Gateway Route Hosts
-sn.api-gateway.route.host.user-service=http://localhost:8084
-sn.api-gateway.route.host.profile-service=http://localhost:8081
+sn.api-gateway.route.hosts.user-service=http://localhost:8084
+sn.api-gateway.route.hosts.profile-service=http://localhost:8081
