[socialnetwork-config-server]: Added service URLs for Feign client in the auth-server

--- a/spring-config/configurations/auth-server-docker.properties
+++ b/spring-config/configurations/auth-server-docker.properties
@@ -28,3 +28,7 @@ sn.kafka.groupId=auth-user-default-group-id
 
 # SocialNetwork: User
 sn.auth.user.signup.default.role=USER
+
+# SocialNetwork: Feign Client URLs
+sn.feign.client.user-service.url=http://localhost:8084/api/v1
+sn.feign.client.profile-service.url=http://localhost:8081/api/v1
