--- a/socialnetwork-auth-server/src/test/resources/application-test.properties
+++ b/socialnetwork-auth-server/src/test/resources/application-test.properties
@@ -22,3 +22,7 @@ sn.kafka.topic.user.new=topic.user.new
 
 # SocialNetwork: User
 sn.auth.user.signup.default.role=USER
+
+# SocialNetwork: Feign Client URLs
+sn.feign.client.user-service.url=http://localhost:8084/api/v1
+sn.feign.client.profile-service.url=http://localhost:8081/api/v1
