--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <mockito.core.version>5.20.0</mockito.core.version>
         <slf4j.version>2.1.0-alpha1</slf4j.version>
         <liquibase.version>5.0.1</liquibase.version>
+        <aws.sdk.secret.manager.version>2.36.1</aws.sdk.secret.manager.version>
+        <openai.java.version>2.12.0</openai.java.version>
         <!-- Plugin versions -->
         <spring.boot.maven.plugin.version>3.5.6</spring.boot.maven.plugin.version>
         <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>
@@ -155,6 +157,17 @@
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
             <version>${liquibase.version}</version>
+        </dependency>
+        <!-- AWS SDK -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>secretsmanager</artifactId>
+            <version>${aws.sdk.secret.manager.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+            <version>${aws.sdk.secret.manager.version}</version>
         </dependency>
     </dependencies>
 
